@@ -1,5 +1,7 @@
 2002-08-27  Alexander Dupuy  <dupuy@sysdetect.com>
 
+	* include/libbk_oscompat.h (BK_FUNCNAME): Insure doesn't grok __func__
+
 	* lib/b_string.c: weird insure++ error was just due to feeping
 	creaturism of string functions; splitting b_string.c into two files
 	eliminates the problem until we add another ten functions more...
